--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ all-deb-amd64:
     - echo "Acquire::By-Hash \"yes\"; " > /etc/apt/apt.conf.d/01byhash
     - apt update && apt install -y apt-transport-https
     - cp debian/apt.sources.list /etc/apt/sources.list
-    - rm -rf /var/lib/apt/lists/* && apt update && apt install -y git wget unzip
+    - rm -rf /var/lib/apt/lists/* && apt update && apt install -y git wget curl unzip
     - curl -fSL "https://dl.google.com/go/go1.9.7.linux-amd64.tar.gz" | tar xzC /usr/local
     - ln -f -s /usr/local/go/bin/* /usr/bin/
     # Clone SCION apps source code
