--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ all-deb-amd64:
     - go install .
     - popd
     # Install SCION apps deps
-    - pushd scion-apps
+    - pushd $HOME/go/src/github.com/netsec-ethz/scion-apps
     - apt install -y govendor
     - ./deps.sh
     - popd
