--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -364,6 +364,9 @@ pkg_deb(
         "python3 (>=3.5)",
         "curl",
         "scionlab",
+        "scion-apps-bwtester",
+        "scion-apps-camerapp",
+        "scion-apps-sensorapp",
     ],
     description = "SCION Web App",
     homepage = PKG_HOMEPAGE,
